fix flexslider overflow

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -208,7 +208,10 @@ section#quote {
 	margin-bottom: 150px;
 }
 
-
+.surf {
+	width: 100%;
+	height: 400px;
+}
 
 // Contact Form 
 
