--- a/app/assets/stylesheets/flexslider.scss
+++ b/app/assets/stylesheets/flexslider.scss
@@ -269,7 +269,9 @@ html[xmlns] .flexslider .slides {
 }
 
 
-
+.flexslider {
+  overflow: auto;
+}
 .flexslider .slides li {
     position:relative;
 }
